--- a/index.html
+++ b/index.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html><html lang="en"><head>
-    <script src="libraries/p5.js"></script>
-    <script src="libraries/p5.dom.min.js"></script>
-    <script src="libraries/p5.sound.min.js"></script>
-    <script src="libraries/matter.js"></script>
-    <script src="libraries/p5.play.js"></script>
+    <script src="p5.js"></script>
+    <script src="p5.dom.min.js"></script>
+    <script src="p5.sound.min.js"></script>
+    <script src="matter.js"></script>
+    <script src="p5.play.js"></script>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-database.js"></script>
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-         https://firebase.google.com/docs/web/setup#available-libraries -->
-    
-         <script>
-          // Your web app's Firebase configuration
-          var firebaseConfig = {
-            apiKey: "AIzaSyCfnRiPlnOLKgwNFt0Ije7SC3NSmk8MZ1M",
-            authDomain: "fruitcatcher-3f61b.firebaseapp.com",
-            databaseURL: "https://fruitcatcher-3f61b.firebaseio.com",
-            projectId: "fruitcatcher-3f61b",
-            storageBucket: "fruitcatcher-3f61b.appspot.com",
-            messagingSenderId: "931669992637",
-            appId: "1:931669992637:web:d54ee514bf7ee4bd77c3d4"
-          };
-          // Initialize Firebase
-          firebase.initializeApp(firebaseConfig);
-        </script>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+ <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-database.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyCMvvhsHolqNfQOMs-YDI8t-6L5M2UDp_w",
+    authDomain: "fruit-catcher-3497c.firebaseapp.com",
+    databaseURL: "https://fruit-catcher-3497c.firebaseio.com",
+    projectId: "fruit-catcher-3497c",
+    storageBucket: "fruit-catcher-3497c.appspot.com",
+    messagingSenderId: "788497571195",
+    appId: "1:788497571195:web:a9eb9792f7a0b73b3fb1de"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
 
     <!--Add Your JS files here -->
-    <script src="js/player.js"></script>
-    <script src="js/form.js"></script>
-    <script src="js/game.js"></script>
+    <script src="player.js"></script>
+    <script src="form.js"></script>
+    <script src="game.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
